# irrigation-test-template

./: README.md  alembic.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
configs/: index.md
docker/: Dockerfile  docker-compose.yml
docs/: api.md  index.md
migrations/: env.py
src/: main.py
src/controllers/: irrigation_controller.py
src/models/: crop.py  soil.py
src/repositories/: database.py
src/services/: irrigation_service.py  soil_service.py  weather_service.py
src/utils/: doc.md  rabbitmq.py
tests/: conftest.py
tests/integration/: test_irrigation_controller.py
tests/unit/: test_irrigation_service.py
