[project]
name = "irrigation-service-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Wyyshnya",email = "jefersonhrm1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "litestar (>=2.16.0,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
black = "^25.1.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
